examples/test/testpolicy15333.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15333
  namespace: namespace69
spec:
  podSelector:
    matchLabels:
      key16: value47
      key34: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value15
      podSelector:
        matchLabels:
          key19: value21
          key7: value21
